# AutonomousResearcher

./: .gitignore  AGENTS.md  LICENSE  README.md  llm_config.yaml  pyproject.toml  requirements.txt
docs/: QUICKSTART.md  agents.md  architecture.md  cli_reference.md  contributing.md  index.md  llm_integration.md  memory_system.md  models.md  roadmap.md  storage_schema.md  system_design.md  tools.md
src/research_engineer/: __init__.py  __main__.py
src/research_engineer/agents/: __init__.py  _adapters.py  _llm_support.py  _streaming.py  architect_agent.py  coding_agent.py  delegation.py  evaluation_agent.py  experiment_agent.py  experiment_planner_agent.py  failure_analyzer.py  literature_agent.py  memory_agent.py  repair_strategist.py  repository_agent.py  research_agent.py  research_loop_agent.py  research_orchestrator.py  research_stages.py  research_workflow.py  reviewer_agent.py  self_repair.py  task_agent.py  test_agent.py
src/research_engineer/cli/: __init__.py  main.py
tests/: __init__.py  requirements.txt  test_agent.py  test_agents.py  test_cli.py  test_delegation.py  test_evaluation_agent.py  test_evaluation_cli.py  test_evaluation_models.py  test_evaluation_tools.py  test_experiment_agent.py  test_experiment_cli.py  test_experiment_models.py  test_experiment_tools.py  test_integration.py  test_integration_phases.py  test_literature_agent.py  test_literature_cli.py  test_literature_models.py  test_literature_tools.py  test_llm.py  test_loop_agent.py  test_loop_cli.py  test_loop_models.py  test_loop_tools.py  test_memory_agent_integration.py  test_memory_cli.py  test_memory_graph.py  test_memory_models.py  test_memory_tools.py  test_models.py  test_phase4.py  test_planner_agent.py  test_planner_models.py  test_planner_tools.py  test_relationship_detector.py  test_repository_memory.py  test_research_workflow.py  test_retrieval_strategies.py  test_self_repair.py  (+4 more)
(+95 files in other folders)
